
                           Release Notes

For instructions on how to upgrade, see:
http://ifdefined.com/readme.html#upgrading

-----------------------------------------------------------------------
-----------------------------------------------------------------------

Corey's TO DO list:


* allow the command line of SVN to be configurable
* add settings for turning off printing of change history.

* auto subscribe if you modified bug
* default value for internal comments
* many to many, queries to organizations
* excel export for reports
* field level permissions for custom fields?
* escalation/reminder, "Due Date"
* new fckEditor 
* some sort of contact management?
* time tracking
* syscolumns, column order scheme - make less fragile
* edit_bug.aspx and css - support for multiple columns
* send, don't send private comments? search, don't search?
* set fields to required?  By org.
* Use date range for search, custom fields
* 1949210 Deleting a user doesn't delete Self Register info
* Table prefixes - Use one database for multiple instances (for hosting)

* Documentation improvements:
workflow.cs
ldap
$ALTER_HERE, queries
more spellchecking...
search and full text search.
blog about lucene.net


-----------------------------------------------------------------------
Version 2.9.8   10/XX/2008 
-----------------------------------------------------------------------


email hotlinks in view only?, like creator

* A few more cosmetic changes

* added 
DisplayAnotherButtonInEditBugPage

-----------------------------------------------------------------------
Version 2.9.7   10/18/2008 
-----------------------------------------------------------------------

** IMPORTANT CHANGE: Changed how the special "guest" user works. Before
this release, even if you gave the guest user permission to edit bugs,
the system automatically reduced his permissions to "Reporter".  I've
removed the logic that automatically reduces his permissions.  You now