@@ -616,6 +616,10 @@ Don't call us, we'll call you."/>
 		<add key="SubversionUsername" value=""/>
 		<add key="SubversionPassword" value=""/>
 		<!-- 
+			These get appended to every SVN command.  
+		-->
+		<add key="SubversionAdditionalArgs" value=""/>
+		<!-- 
 			This adds another link, "WebSvn" to view_svn_file_revisions.aspx, a link to WebSvn. 
 			Make sure to replace the & symbol with &amp; in your URL.
 			The logic in view_svn_file_revisions.aspx replaces $PATH and $REV with
